update to galen v2

--- a/site/index.html
+++ b/site/index.html
@@ -14,10 +14,20 @@
         </header>
         <section id="content">
             <aside id="aside"> 
-                ASIDE<br /><br /><br /><br /><br /><br /><br />
+                ASIDE
             </aside>
             <article id="article">
-                TEST CONTENT<br /><br /><br /><br /><br /><br /><br />
+                <p>
+                    Run test suite with:
+                </p>
+                <pre>
+                    galen test mytest.test<br />
+                    --htmlreport "htmlreport-dir"<br />
+                    --testngreport "report/testng.xml"<br />
+                    --jsonreport "jsonreport-dir"<br />
+                    --parallel-tests 4
+                </pre>
+                <br /><br /><br /><br /><br />
             </article>
         </section>
         <footer id="footer">
