--- a/test/htmlreport-dir/report.html
+++ b/test/htmlreport-dir/report.html
@@ -10,47 +10,47 @@
         <script>
 var reportData = {
   "tests" : [ {
-    "name" : "My page on Smartphone device",
-    "startedAt" : 1435068386696,
-    "endedAt" : 1435068391641,
-    "failed" : true,
+    "name" : "Home page on Desktop device",
+    "startedAt" : 1442310166111,
+    "endedAt" : 1442310172237,
+    "failed" : false,
     "statistic" : {
-      "passed" : 4,
-      "errors" : 1,
+      "passed" : 3,
+      "errors" : 0,
       "warnings" : 0,
-      "total" : 5
+      "total" : 3
     },
-    "testId" : "1-my-page-on-smartphone-device",
-    "failed" : true,
-    "duration" : 4945
+    "testId" : "1-home-page-on-desktop-device",
+    "failed" : false,
+    "duration" : 6126
   }, {
-    "name" : "My page on Tablet device",
-    "startedAt" : 1435068391641,
-    "endedAt" : 1435068395877,
-    "failed" : true,
+    "name" : "Home page on Tablet device",
+    "startedAt" : 1442310166113,
+    "endedAt" : 1442310173713,
+    "failed" : false,
     "statistic" : {
-      "passed" : 4,
-      "errors" : 1,
+      "passed" : 3,
+      "errors" : 0,
       "warnings" : 0,
-      "total" : 5
+      "total" : 3
     },
-    "testId" : "2-my-page-on-tablet-device",
-    "failed" : true,
-    "duration" : 4236
+    "testId" : "2-home-page-on-tablet-device",
+    "failed" : false,
+    "duration" : 7600
   }, {
-    "name" : "My page on Desktop device",
-    "startedAt" : 1435068395877,
-    "endedAt" : 1435068400048,
-    "failed" : true,
+    "name" : "Home page on Mobile device",
+    "startedAt" : 1442310166109,
+    "endedAt" : 1442310175113,
+    "failed" : false,
     "statistic" : {
-      "passed" : 4,
-      "errors" : 1,
+      "passed" : 3,
+      "errors" : 0,
       "warnings" : 0,
-      "total" : 5
+      "total" : 3
     },
-    "testId" : "3-my-page-on-desktop-device",
-    "failed" : true,
-    "duration" : 4171
+    "testId" : "3-home-page-on-mobile-device",
+    "failed" : false,
+    "duration" : 9004
   } ]
 };
 
