--- a/test/htmlreport-dir/1-home-page-on-a-small-mobile-device.html
+++ b/test/htmlreport-dir/1-home-page-on-a-small-mobile-device.html
@@ -7,98 +7,62 @@
         <script src="galen-report.js"></script>
         <script>
 var reportData = {
-  "testId" : "2-my-page-on-tablet-device",
-  "name" : "My page on Tablet device",
+  "testId" : "1-home-page-on-a-small-mobile-device",
+  "name" : "Home page on a small mobile device",
   "report" : {
     "nodes" : [ {
-      "name" : "file:///Volumes/Backup%20di%20Time%20Machine/Sites/Violo-GitHub/Galen-VTDD/site/index.html 640x800",
+      "name" : "file:///Volumes/Backup%20di%20Time%20Machine/Sites/Violo-GitHub/Galen-VTDD/site/index.html     320x480",
       "status" : "info",
       "nodes" : [ {
-        "name" : "        wait 2s",
-        "status" : "info",
-        "time" : 1435068393410,
-        "type" : "node"
-      }, {
-        "name" : "        check myspec.spec --include \"Tablet\"",
+        "name" : "check   myspec.gspec --include \"mobile,all\" --exclude \"nomobile\"",
         "status" : "info",
         "nodes" : [ {
-          "name" : "Check layout: myspec.spec included tags: Tablet",
-          "status" : "error",
-          "time" : 1435068395808,
-          "includedTags" : [ "Tablet" ],
+          "name" : "Check layout: myspec.gspec included tags: mobile,all",
+          "status" : "info",
+          "time" : 1442308284382,
+          "includedTags" : [ "mobile", "all" ],
+          "excludedTags" : [ "nomobile" ],
           "sections" : [ {
-            "name" : "*",
+            "name" : "Main section",
             "objects" : [ {
-              "name" : "Header",
+              "name" : "header",
               "specs" : [ {
-                "status" : "error",
+                "status" : "info",
                 "place" : {
-                  "filePath" : "myspec.spec",
-                  "lineNumber" : 12
+                  "filePath" : "myspec.gspec",
+                  "lineNumber" : 13
                 },
-                "name" : "absent",
-                "errors" : [ "\"Header\" is not absent on page" ],
-                "highlight" : [ "Header" ]
+                "name" : "height 100px",
+                "highlight" : [ "header" ]
               } ]
             }, {
-              "name" : "Footer",
+              "name" : "footer",
               "specs" : [ {
                 "status" : "info",
                 "place" : {
-                  "filePath" : "myspec.spec",
-                  "lineNumber" : 15
+                  "filePath" : "myspec.gspec",
+                  "lineNumber" : 16
                 },
-                "name" : "visible",
-                "highlight" : [ "Footer" ]
-              } ]
-            } ]
-          }, {
-            "name" : "Desktop, Tablet",
-            "objects" : [ {
-              "name" : "Aside",
-              "specs" : [ {
-                "status" : "info",
-                "place" : {
-                  "filePath" : "myspec.spec",
-                  "lineNumber" : 21
-                },
-                "name" : "width: ~ 20 % of viewport/width",
-                "highlight" : [ "Aside" ]
-              } ]
-            }, {
-              "name" : "Content",
-              "specs" : [ {
-                "status" : "info",
-                "place" : {
-                  "filePath" : "myspec.spec",
-                  "lineNumber" : 24
-                },
-                "name" : "width: ~ 80 % of viewport/width",
-                "highlight" : [ "Content" ]
+                "name" : "height 50px",
+                "highlight" : [ "footer" ]
               } ]
             } ]
           } ],
           "objects" : {
-            "Aside" : {
-              "area" : [ 0, 116, 128, 134 ]
+            "footer" : {
+              "area" : [ 0, 323, 335, 50 ]
             },
-            "Header" : {
-              "area" : [ 0, 16, 640, 100 ]
-            },
-            "Content" : {
-              "area" : [ 128, 116, 512, 134 ]
-            },
-            "Footer" : {
-              "area" : [ 0, 250, 640, 19 ]
+            "header" : {
+              "area" : [ 0, 0, 335, 100 ]
             }
           },
-          "screenshot" : "layout-2-screenshot.png",
+          "screenshot" : "layout-1-screenshot.png",
           "type" : "layout"
         } ],
-        "time" : 1435068395410,
+        "time" : 1442308283804,
         "type" : "node"
       } ],
-      "time" : 1435068391641,
+      "time" : 1442308281306,
       "type" : "node"
     } ]
   }
@@ -158,7 +122,7 @@ var reportData = {
         <script id="report-layout-tpl" type="text/x-handlebars-template">
             <li>
                 <span class="report-time">{{formatReportTime time}}</span>
-                <a class="expand-link node-expand-button node-status-label node-status-info contains-children-true collapsed" href="#">INFO</a>
+                <a class="expand-link node-expand-button node-status-label node-status-info contains-children-true collapsed" href="#">LAYOUT</a>
                 <div class="node-name">{{name}}</div>
                 <div class="node-details expand-container">
                     {{renderSublayout this}}
@@ -280,7 +244,7 @@ var reportData = {
                 <li><a class="menu-op-expand-errors" href="#">Expand Errors</a></li>
             </ul>
         </div>
-        <h2>My page on Tablet device</h2>
+        <h2>Home page on a small mobile device</h2>
         <div id="main"></div>
         <div id="screen-shadow"></div>
         <div id="popup" class="popup">
